pass/fail % progress distinction;

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div id="folders"></div>
       <div id="workProgress" class="progressContainer">
 	<div class="label"></div>
-	<div class="progress"></div>
+	<!-- div class="progress"></div-->
+	<div class="success"></div>
+	<div class="failure"></div>
       </div>
     </div>
     <div id="actions">
