--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" type="text/css" href="baserunner.css"/>
   </head>
   <body>
-    <h1>baserunner</h1>
     <div id="indicators">
       <div id="states">
-	<div id="stateContainer"><div>State: </div><div id="state"></div></div>
+	<div id="stateContainer"><div class="label">State: </div><div id="state"></div></div>
 	<div id="workProgress" class="progressContainer">
 	  <div class="label"></div>
 	  <!-- div class="progress"></div-->
 	  <div class="success"></div>
 	  <div class="failure"></div>
+	</div>
+	<div id="counterContainers">
+	  <div style="width: 200px; float: left">
+	    <div id="successContainer" class="counterContainer"><div class="label">Success: </div><div id="successCounter"></div></div>
+	    <div id="failureContainer" class="counterContainer"><div class="label">Failure: </div><div id="failureCounter"></div></div>
+	  </div>
+	  <div style="width: 200px; float: left">
+	    <div id="totalContainer"   class="counterContainer"><div class="label">Total: </div><div id="totalCounter"></div></div>
+	    <div id="queuedContainer"  class="counterContainer"><div class="label">Queued: </div><div id="queuedCounter"></div></div>
+	  </div>
 	</div>
       </div>
       <div id="folderContainer">
