estimate time of completion

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 	    <div id="totalContainer"   class="counterContainer"><div class="label">Total: </div><div id="totalCounter"></div></div>
 	    <div id="queuedContainer"  class="counterContainer"><div class="label">Queued: </div><div id="queuedCounter"></div></div>
 	  </div>
+	  <div style="width: 200px; float: left">
+	    <div id="etaContainer"   class="counterContainer"><div class="label">ETA: </div><div id="etaCounter"></div></div>
+	  </div>
 	</div>
       </div>
       <div id="folderContainer">
