--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>baserunner</title>
-    <link rel="stylesheet" type="text/css" href="baserunner.css"/>
+    <title>lamprey</title>
+    <link rel="stylesheet" type="text/css" href="lamprey.css"/>
   </head>
   <body>
     <div id="indicators">
